sinalcabo/force-app/main/default/objects/Lote_Integracao__c/Lote_Integracao__c.object-meta.xml
<CustomObject>
    <description>Registo de uma corrida de integração: que janela foi lida, o que veio, quantas ordens foram criadas ou actualizadas e como terminou. É o sítio onde se percebe se a ligação ao operador está viva.</description>
    <label>Lote de integração</label>
    <nameField>
        <displayFormat>LOT-{000000}</displayFormat>
        <label>Lote</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lotes de integração</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>