sinalcabo/force-app/main/default/objects/Lote_Integracao__c/fields/Actualizados__c.field-meta.xml
<CustomField>
    <fullName>Actualizados__c</fullName>
    <description>Quantas ordens já existentes o lote actualizou.</description>
    <inlineHelpText>Uma ordem que chega igual ao que já está gravado não conta aqui, porque não é escrita.</inlineHelpText>
    <label>Ordens actualizadas</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>