sinalcabo/force-app/main/default/objects/Lote_Integracao__c/fields/Chave_Execucao__c.field-meta.xml
<CustomField>
    <fullName>Chave_Execucao__c</fullName>
    <description>Identificador único da corrida, composto pela interface, tipo de corrida e limites da janela. Impede que duas corridas leiam a mesma janela.</description>
    <externalId>true</externalId>
    <inlineHelpText>Preenchido pela integração. Um erro de valor duplicado significa que outra corrida já leu esta janela.</inlineHelpText>
    <label>Chave de execução</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>