sinalcabo/force-app/main/default/objects/Lote_Integracao__c/fields/Criados__c.field-meta.xml
<CustomField>
    <fullName>Criados__c</fullName>
    <description>Quantas ordens de trabalho novas o lote criou.</description>
    <label>Ordens criadas</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>