sinalcabo/force-app/main/default/objects/Lote_Integracao__c/fields/Direccao__c.field-meta.xml
<CustomField>
    <fullName>Direccao__c</fullName>
    <description>Sentido dos dados: entrada é o que lemos de fora, saída é o que enviamos.</description>
    <inlineHelpText>As corridas de leitura da API são sempre de entrada.</inlineHelpText>
    <label>Direcção</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entrada</fullName>
                <default>true</default>
                <label>Entrada</label>
            </value>
            <value>
                <fullName>Saída</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>