sinalcabo/force-app/main/default/objects/Lote_Integracao__c/fields/Duracao_ms__c.field-meta.xml
<CustomField>
    <fullName>Duracao_ms__c</fullName>
    <description>Tempo total do lote em milésimos de segundo, do pedido ao fecho.</description>
    <inlineHelpText>Serve para vigiar a NOS: acima de 60.000 a chamada está perto do corte do gateway.</inlineHelpText>
    <label>Duração (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>