sinalcabo/force-app/main/default/objects/Lote_Integracao__c/fields/Erro__c.field-meta.xml
<CustomField>
    <fullName>Erro__c</fullName>
    <description>Mensagem técnica do erro que fez o lote falhar.</description>
    <inlineHelpText>Vazio nos lotes que correram bem. Copia esta mensagem para o pedido de apoio.</inlineHelpText>
    <label>Erro</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>