sinalcabo/force-app/main/default/objects/Lote_Integracao__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Estado do lote. Nasce Em curso, fecha em Concluído, Concluído com erros ou Falhado.</description>
    <inlineHelpText>Falhado quer dizer que a leitura não chegou ao fim. Concluído com erros quer dizer que leu, mas houve registos rejeitados.</inlineHelpText>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em curso</fullName>
                <default>true</default>
                <label>Em curso</label>
            </value>
            <value>
                <fullName>Concluído</fullName>
            </value>
            <value>
                <fullName>Concluído com erros</fullName>
            </value>
            <value>
                <fullName>Falhado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>