sinalcabo/force-app/main/default/objects/Lote_Integracao__c/fields/Interface__c.field-meta.xml
<CustomField>
    <fullName>Interface__c</fullName>
    <description>Nome da interface que produziu o lote. Hoje existem duas, a leitura da API de ordens do operador e o carregamento do ficheiro do PNI.</description>
    <inlineHelpText>Exemplos: NOS Field Force Management, Ficheiro do PNI.</inlineHelpText>
    <label>Interface</label>
    <length>40</length>
    <type>Text</type>
</CustomField>