sinalcabo/force-app/main/default/objects/Lote_Integracao__c/fields/Janela_Fim__c.field-meta.xml
<CustomField>
    <fullName>Janela_Fim__c</fullName>
    <description>Momento até ao qual o lote pediu ordens ao operador.</description>
    <inlineHelpText>Hora de Portugal. Janelas com estado fechado não podem passar de 72 horas, é limite da NOS.</inlineHelpText>
    <label>Fim da janela</label>
    <type>DateTime</type>
</CustomField>