sinalcabo/force-app/main/default/objects/Lote_Integracao__c/fields/Janela_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Janela_Inicio__c</fullName>
    <description>Momento a partir do qual o lote pediu ordens ao operador.</description>
    <inlineHelpText>Hora de Portugal. A NOS filtra pela data em que a ordem foi atribuída ao parceiro.</inlineHelpText>
    <label>Início da janela</label>
    <type>DateTime</type>
</CustomField>