sinalcabo/force-app/main/default/objects/Lote_Integracao__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Resposta em bruto devolvida pelo operador. Só é guardada quando o lote gera ocorrências e é apagada ao fim de 30 dias.</description>
    <inlineHelpText>É o que permite reprocessar o lote sem voltar a chamar a NOS.</inlineHelpText>
    <label>Resposta do operador</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>