sinalcabo/force-app/main/default/objects/Lote_Integracao__c/fields/Proxima_Chegada_Esperada__c.field-meta.xml
<CustomField>
    <fullName>Proxima_Chegada_Esperada__c</fullName>
    <description>Quando é esperada a próxima corrida deste tipo. Serve à vigilância para detectar silêncio da integração.</description>
    <inlineHelpText>Se esta hora já passou e não entrou nenhum lote novo, a integração está parada.</inlineHelpText>
    <label>Próxima chegada esperada</label>
    <type>DateTime</type>
</CustomField>