sinalcabo/force-app/main/default/objects/Lote_Integracao__c/fields/Registos_Lidos__c.field-meta.xml
<CustomField>
    <fullName>Registos_Lidos__c</fullName>
    <description>Quantas linhas o operador devolveu neste lote, antes de qualquer tratamento.</description>
    <inlineHelpText>Inclui repetições. O número de ordens distintas pode ser menor.</inlineHelpText>
    <label>Registos lidos</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>