sinalcabo/force-app/main/default/objects/Lote_Integracao__c/fields/Rejeitados__c.field-meta.xml
<CustomField>
    <fullName>Rejeitados__c</fullName>
    <description>Quantas linhas o lote não conseguiu gravar.</description>
    <inlineHelpText>Cada rejeição gera uma ocorrência com o motivo. Se este número for maior que zero, abre a lista de ocorrências.</inlineHelpText>
    <label>Registos rejeitados</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>