sinalcabo/force-app/main/default/objects/Lote_Integracao__c/fields/Reprocessado_De__c.field-meta.xml
<CustomField>
    <fullName>Reprocessado_De__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lote de origem, quando este lote nasceu de um reprocessamento da resposta guardada em vez de uma chamada nova à NOS.</description>
    <inlineHelpText>Fica vazio nas corridas normais.</inlineHelpText>
    <label>Reprocessado do lote</label>
    <referenceTo>Lote_Integracao__c</referenceTo>
    <relationshipLabel>Reprocessamentos</relationshipLabel>
    <relationshipName>Reprocessamentos</relationshipName>
    <type>Lookup</type>
</CustomField>