sinalcabo/force-app/main/default/objects/Lote_Integracao__c/fields/Resultado__c.field-meta.xml
<CustomField>
    <fullName>Resultado__c</fullName>
    <description>Resultado técnico da chamada à API do operador.</description>
    <inlineHelpText>Vazio significa que a NOS respondeu bem e não havia ordens na janela. Timeout significa que a resposta demorou mais do que o permitido.</inlineHelpText>
    <label>Resultado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sucesso</fullName>
            </value>
            <value>
                <fullName>Vazio</fullName>
            </value>
            <value>
                <fullName>Timeout</fullName>
            </value>
            <value>
                <fullName>Erro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>