sinalcabo/force-app/main/default/objects/Lote_Integracao__c/fields/Tipo_Corrida__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Corrida__c</fullName>
    <description>Que passo do ciclo de leitura deu origem ao lote.</description>
    <inlineHelpText>Abertas e Fechadas são as corridas de cinco em cinco minutos, Varrimento é a passagem larga de hora a hora, Detalhes lê ordem a ordem. Manual é uma corrida pedida por uma pessoa. Ficheiro PNI é o carregamento do ficheiro do cliente, e a simulação é a passagem de ensaio que não grava nenhuma ordem.</inlineHelpText>
    <label>Tipo de corrida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abertas</fullName>
            </value>
            <value>
                <fullName>Fechadas</fullName>
            </value>
            <value>
                <fullName>Varrimento</fullName>
            </value>
            <value>
                <fullName>Detalhes</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Reprocessamento</fullName>
            </value>
            <value>
                <fullName>Carga histórica</fullName>
            </value>
            <value>
                <fullName>Ficheiro PNI</fullName>
            </value>
            <value>
                <fullName>Simulação do ficheiro PNI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>