sinalcabo/force-app/main/default/objects/Lote_Integracao__c/listViews/Em_Erro.listView-meta.xml
<ListView>
    <fullName>Em_Erro</fullName>
    <columns>NAME</columns>
    <columns>Tipo_Corrida__c</columns>
    <columns>Estado__c</columns>
    <columns>Resultado__c</columns>
    <columns>Erro__c</columns>
    <columns>Janela_Inicio__c</columns>
    <columns>Janela_Fim__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Falhado,Concluído com erros</value>
    </filters>
    <label>Em erro</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>