sinalcabo/force-app/main/default/objects/Lote_Integracao__c/listViews/Ultimos_7_Dias.listView-meta.xml
<ListView>
    <fullName>Ultimos_7_Dias</fullName>
    <columns>NAME</columns>
    <columns>Tipo_Corrida__c</columns>
    <columns>Estado__c</columns>
    <columns>Resultado__c</columns>
    <columns>Janela_Inicio__c</columns>
    <columns>Janela_Fim__c</columns>
    <columns>Registos_Lidos__c</columns>
    <columns>Criados__c</columns>
    <columns>Actualizados__c</columns>
    <columns>Rejeitados__c</columns>
    <columns>Duracao_ms__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Últimos 7 dias</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>